# Todo-ai-project

./: .gitignore  Dockerfile  README.md  docker-compose.yml  package-lock.json  test_agent.py
backend/: Dockerfile  ai_agent.py  auth.py  database.py  main.py  models.py  pyproject.toml  requirements.txt
frontend/: Dockerfile  package-lock.json  package.json  tailwind.config.cjs  tsconfig.json
frontend/src/: middleware.ts
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/(auth)/login/: page.tsx
frontend/src/app/(auth)/signup/: page.tsx
frontend/src/app/api/auth/[...nextauth]/: route.ts
frontend/src/app/dashboard/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/components/: AddTodoForm.tsx  AiAssistant.tsx  Navbar.tsx  Sidebar.tsx  TodoItem.tsx  TodoList.tsx
frontend/src/lib/: api.ts
specs/api/: rest-endpoints.md
specs/database/: schema.md
specs/features/: authentication.md
